--- a/observatoryMap/index.html
+++ b/observatoryMap/index.html
@@ -29,6 +29,27 @@
 
 
 	<div class="row">
+
+		<div class="col small" >
+			<a class="font-5" href="../sleepingMap/index.html">Story 1</a>
+		</div>	
+
+		<div class="col small" >
+			<a class="font-5" href="../turtleMap/turtle.html">Story 2</a>
+		</div>	
+
+		<div class="col small" >
+			<a class="font-5" href="../index.html">Go Back</a>
+		</div>			
+
+		<div class="col small" >
+			<a class="font-5" href="../fireflyMap/index.html">Story 4</a>
+		</div>	
+
+	</div>
+	
+
+	<div class="row">
 		<div class="col full">
 			<p class="font-3">The U.S. Observatory Map</p>
 		</div>
