--- a/sleepingMap/index.html
+++ b/sleepingMap/index.html
@@ -21,16 +21,37 @@
 			Cities stop sleeping, so as people. Millions of people working night shifts. Research suggest that interrupt biological rhythms are linked to medical disorders such as heart disease, insomnia, and depression.
 			</p>
 			<p class="font-2">
-			The diagram shows that when population density increased, its co-relation with insufficient sleep increased. At Larimer in Colorado, where is far away from city and crowd, people have the best sleeping quality.			
+			The diagram shows that in U.S. county level, when population density increased, its co-relation with insufficient sleep increased. At Larimer in Colorado, where is far away from city and crowd, people have the best sleeping quality.			
 			</p>
 
 		</div>
 	</div>
 
+	<div class="row">
 
+		<div class="col small" >
+			<a class="font-5" href="../index.html">Go Back</a>
+		</div>	
+
+		<div class="col small" >
+			<a class="font-5" href="../turtleMap/turtle.html">Story 2</a>
+		</div>	
+
+		<div class="col small" >
+			<a class="font-5" href="../observatoryMap/index.html">Story 3</a>
+		</div>			
+
+		<div class="col small" >
+			<a class="font-5" href="../fireflyMap/index.html">Story 4</a>
+		</div>	
+
+	</div>
+
+
+	
 	<div class="row">
 		<div class="col full">
-			<p class="font-3">Insufficient Sleep vs Population Density</p>
+			<p class="font-3">Insufficient Sleep vs Population Density in U.S. Counties</p>
 		</div>
 	</div>
 
