--- a/turtleMap/turtle.html
+++ b/turtleMap/turtle.html
@@ -25,7 +25,25 @@
 
 		</div>
 	</div>
+	<div class="row">
 
+		<div class="col small" >
+			<a class="font-5" href="../sleepingMap/index.html">Story 1</a>
+		</div>	
+
+		<div class="col small" >
+			<a class="font-5" href="../index.html">Go Back</a>
+		</div>	
+
+		<div class="col small" >
+			<a class="font-5" href="../observatoryMap/index.html">Story 3</a>
+		</div>			
+
+		<div class="col small" >
+			<a class="font-5" href="../fireflyMap/index.html">Story 4</a>
+		</div>	
+
+	</div>
 
 	<div class="row">
 		<div class="col full">
