--- a/fireflyMap/index.html
+++ b/fireflyMap/index.html
@@ -31,6 +31,26 @@
 
 
 	<div class="row">
+
+		<div class="col small" >
+			<a class="font-5" href="../sleepingMap/index.html">Story 1</a>
+		</div>	
+
+		<div class="col small" >
+			<a class="font-5" href="../turtleMap/turtle.html">Story 2</a>
+		</div>	
+
+		<div class="col small" >
+			<a class="font-5" href="../observatoryMap/index.html">Story 3</a>
+		</div>			
+
+		<div class="col small" >
+			<a class="font-5" href="../index.html">Go Back</a>
+		</div>	
+
+	</div>
+
+	<div class="row">
 		<div class="col full">
 			<p class="font-3">Firefly Map from 2009 to 2013</p>
 		</div>
