--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Homework11</title>
+	<title>The story of the night</title>
 	<link href="style.css" rel="stylesheet">
 </head>
 
